<resources>
    <string name="app_name">AndroidJavaEdu</string>
    <string name="title_text">Примеры:</string>
    <string name="ok_text">Ok</string>
    <string name="red_text">Red</string>
    <string name="green_text">Green</string>
    <string name="blue_text">Blue</string>
    <string name="id_text">ID</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="yes_text">Да</string>
    <string name="no_text">Нет</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="list_text">List</string>
    <string name="add_text">Add</string>
    <string name="read_text">Read</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="clear_text">Clear</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="bind_text">Bind</string>
    <string name="unbind_text">Unbind</string>
    <string name="screen_text">Screen</string>
    <string name="category1_text">Category 1</string>
    <string name="category2_text">Category 2</string>
    <string name="checkbox1_text">CheckBox 1</string>
    <string name="checkbox2_text">CheckBox 2</string>
    <string name="checkbox3_text">CheckBox 3</string>
    <string name="checkbox4_text">CheckBox 4</string>
    <string name="checkbox5_text">CheckBox 5</string>
    <string name="checkbox6_text">CheckBox 6</string>
    <string name="item1_text">Item1</string>
    <string name="item2_text">Item2</string>
    <string name="item3_text">Item3</string>
    <string name="item4_text">Item4</string>
    <string name="message_text">Text of your message</string>
    <string name="maybe_text">Maybe</string>
    <string name="layout_types_title">Виды Layouts</string>
    <string name="linear_layout_text">Linear Layout</string>
    <string name="table_layout_text">Table Layout</string>
    <string name="relative_layout_text">Relative Layout</string>
    <string name="absolute_layout_text">Absolute Layout</string>
    <string name="lesson26_sqlite_title">SQLite</string>
    <string name="lesson27_sqlite_query_title">SQLite. Подробнее про метод query...</string>
    <string name="lesson27_countries_catalog_text">Справочник стран</string>
    <string name="lesson27_all_records_text">Все записи</string>
    <string name="lesson27_function_text">Функция</string>
    <string name="lesson27_population_text">Население</string>
    <string name="lesson27_population_greater_then_text">Население ></string>
    <string name="lesson27_population_by_region_text">Население по региону</string>
    <string name="lesson27_population_by_region_greater_then_text">Население по региону ></string>
    <string name="lesson27_sorting_text">Сортировка</string>
    <string name="lesson27_country_name_text">Наименование</string>
    <string name="lesson27_region_text">Регион</string>
    <string name="lesson61_checkbox_description_text">Description of checkbox</string>
    <string name="lesson61_list_description_text">Description of list</string>
    <string name="lesson61_screen_description_text">Description of screen</string>
    <string name="lesson61_category1_description_text">Description of category 1</string>
    <string name="lesson61_category2_description_text">Description of category 2</string>
    <string name="lesson61_checkbox1_description_text">Description of checkbox 1</string>
    <string name="lesson61_checkbox2_description_text">Description of checkbox 2</string>
    <string name="lesson61_checkbox3_description_text">Description of checkbox 3</string>
    <string name="lesson61_checkbox4_description_text">Description of checkbox 4</string>
    <string name="lesson61_checkbox5_description_text">Description of checkbox 5</string>
    <string name="lesson62_checkbox1_off_description_text">Description of checkbox 1 off</string>
    <string name="lesson62_checkbox1_on_description_text">Description of checkbox 1 on</string>
    <string name="lesson62_checkbox6_description_text">Description of checkbox 6</string>
    <string name="lesson86_service_title">Service. Биндинг. ServiceConnection</string>
    <string name="lesson99_list1_text">List 1</string>
    <string name="lesson99_list2_text">List 2</string>
    <string name="lesson99_screen1_text">Screen 1</string>
    <string name="lesson99_screen2_text">Screen 2</string>
    <string name="lesson99_header1_text">Header 1</string>
    <string name="lesson99_header2_text">Header 2</string>
    <string name="lesson99_header3_text">Header 3</string>
    <string name="lesson99_checkbox1_text">CheckBox 1</string>
    <string name="lesson99_edittext1_text">EditText 1</string>
    <string name="lesson99_category1_text">Category 1</string>
    <string name="lesson99_category2_text">Category 2</string>
    <string name="lesson99_checkbox2_text">CheckBox 2</string>
    <string name="lesson99_edittext2_text">EditText 2</string>
    <string name="lesson99_list1_summary_text">Summary of List 1</string>
    <string name="lesson99_list2_summary_text">Summary of List 2</string>
    <string name="lesson99_screen1_summary_text">Summary of Screen 1</string>
    <string name="lesson99_screen2_summary_text">Summary of Screen 2</string>
    <string name="lesson99_header1_summary_text">Summary of Header 1</string>
    <string name="lesson99_header2_summary_text">Summary of Header 2</string>
    <string name="lesson99_header3_summary_text">Summary of Header 3</string>
    <string name="lesson99_checkbox1_summary_text">Summary of CheckBox 1</string>
    <string name="lesson99_edittext1_summary_text">Summary of EditText 1</string>
    <string name="lesson99_checkbox2_summary_text">Summary of CheckBox 2</string>
    <string name="lesson99_edittext2_summary_text">Summary of EditText 2</string>
</resources>