<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MMV">

    <LinearLayout
        style="@style/Navigation_LL">

        <LinearLayout
            android:id="@+id/Lesson27_ArrowBackWrapLL"
            style="@style/Image_Wrap"
            android:layout_width="70dp">

            <ImageView style="@style/Navigation_ArrowBack_IV" />

        </LinearLayout>
        <TextView
            style="@style/Navigation_Title_TV"
            android:text="@string/lesson27_sqlite_query_title" />
        <View style="@style/One_Row_Strut"/>

    </LinearLayout>
    <LinearLayout
        style="@style/MMV"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/MW"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/lesson27_countries_catalog_text"
            android:textSize="14sp"
            android:gravity="center_horizontal" />
        <Button
            android:id="@+id/Lesson27_All_BTN"
            style="@style/WW"
            android:text="@string/lesson27_all_records_text"
            android:layout_marginTop="5dp" />
        <LinearLayout
            android:id="@+id/Lesson27_Layout1_LL"
            style="@style/MW"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/Lesson27_Function_BTN"
                style="@style/WW"
                android:text="@string/lesson27_function_text" />
            <EditText
                android:id="@+id/Lesson27_Function_ET"
                style="@style/WW"
                android:layout_weight="1">
                <requestFocus>
                </requestFocus>
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Lesson27_Layout2_LL"
            style="@style/MW"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/Lesson27_Population_BTN"
                style="@style/WW"
                android:text="@string/lesson27_population_greater_then_text" />
            <EditText
                android:id="@+id/Lesson27_Population_ET"
                style="@style/WW"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>
        <Button
            android:id="@+id/Lesson27_Group_BTN"
            style="@style/WW"
            android:text="@string/lesson27_population_by_region_text"
            android:layout_marginTop="5dp" />
        <LinearLayout
            android:id="@+id/Lesson27_Layout4_LL"
            style="@style/MW"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/Lesson27_Having_BTN"
                style="@style/WW"
                android:text="@string/lesson27_population_by_region_greater_then_text" />
            <EditText
                android:id="@+id/Lesson27_RegionPeople_ET"
                style="@style/WW"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Lesson27_Layout3_LL"
            style="@style/MW"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/Lesson27_Sort_BTN"
                style="@style/WW"
                android:text="@string/lesson27_sorting_text" />
            <RadioGroup
                android:id="@+id/Lesson27_Sorting_RG"
                style="@style/WW">

                <RadioButton
                    android:id="@+id/Lesson27_CountryName_RB"
                    style="@style/WW"
                    android:checked="true"
                    android:text="@string/lesson27_country_name_text" />
                <RadioButton
                    android:id="@+id/Lesson27_Population_RB"
                    style="@style/WW"
                    android:text="@string/lesson27_population_text" />
                <RadioButton
                    android:id="@+id/Lesson27_Region_RB"
                    style="@style/WW"
                    android:text="@string/lesson27_region_text" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>