<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MMV">

    <LinearLayout
        style="@style/Navigation_LL">

        <LinearLayout
            android:id="@+id/Lesson26_ArrowBackWrapLL"
            style="@style/Image_Wrap"
            android:layout_width="70dp">

            <ImageView style="@style/Navigation_ArrowBack_IV" />

        </LinearLayout>
        <TextView
            style="@style/Navigation_Title_TV"
            android:text="@string/lesson26_sqlite_title" />
        <View style="@style/One_Row_Strut"/>

    </LinearLayout>
    <LinearLayout
        style="@style/MMV"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/Lesson26_Layout4_LL"
            style="@style/MW"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/WW"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                android:text="@string/id_text" />
            <EditText
                android:id="@+id/Lesson26_ID_ET"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" />
            <Button
                android:id="@+id/Lesson26_Update_BTN"
                style="@style/WW"
                android:text="@string/update_text" />
            <Button
                android:id="@+id/Lesson26_Delete_BTN"
                style="@style/WW"
                android:text="@string/delete_text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Lesson26_Layout1_LL"
            style="@style/MW">

            <TextView
                style="@style/WW"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/name_text"/>
            <EditText
                android:id="@+id/Lesson26_Name_ET"
                style="@style/WW"
                android:layout_weight="1">
                <requestFocus>
                </requestFocus>
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Lesson26_Layout3_LL"
            style="@style/MW">

            <TextView
                android:id="@+id/Lesson26_Email_TV"
                style="@style/WW"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/email_text" />
            <EditText
                android:id="@+id/Lesson26_Email_ET"
                style="@style/WW"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Lesson26_Layout2_LL"
            style="@style/MW">

            <Button
                android:id="@+id/Lesson26_Add_BTN"
                style="@style/WW"
                android:text="@string/add_text" />
            <Button
                android:id="@+id/Lesson26_Read_BTN"
                style="@style/WW"
                android:text="@string/read_text" />
            <Button
                android:id="@+id/Lesson26_Clear_BTN"
                style="@style/WW"
                android:text="@string/clear_text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>