<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MMV">

    <LinearLayout
        style="@style/Navigation_LL">

        <LinearLayout
            android:id="@+id/Lesson86_ArrowBackWrapLL"
            style="@style/Image_Wrap"
            android:layout_width="70dp">

            <ImageView style="@style/Navigation_ArrowBack_IV" />

        </LinearLayout>
        <TextView
            style="@style/Navigation_Title_TV"
            android:text="@string/lesson86_service_title" />

        <View style="@style/One_Row_Strut"/>

    </LinearLayout>
    <LinearLayout
        style="@style/MMV"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/Lesson86_Start_Btn"
            style="@style/WW"
            android:onClick="onClick"
            android:text="@string/start_text" />
        <Button
            android:id="@+id/Lesson86_Stop_Btn"
            style="@style/WW"
            android:onClick="onClick"
            android:text="@string/stop_text" />
        <Button
            android:id="@+id/Lesson86_Bind_Btn"
            style="@style/WW"
            android:onClick="onClick"
            android:text="@string/bind_text" />
        <Button
            android:id="@+id/Lesson86_Unbind_Btn"
            style="@style/WW"
            android:onClick="onClick"
            android:text="@string/unbind_text" />

    </LinearLayout>

</LinearLayout>