<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.sostrovsky.androidjavaedu.Lesson1_BasicViews"
    style="@style/MMV">

    <LinearLayout
        style="@style/Navigation_LL">

        <LinearLayout
            android:id="@+id/Lesson3_ArrowBackWrapLL"
            style="@style/Image_Wrap"
            android:layout_width="70dp">

            <ImageView style="@style/Navigation_ArrowBack_IV" />

        </LinearLayout>
        <TextView
            style="@style/Navigation_Title_TV"
            android:text="@string/layout_types_title" />
        <View style="@style/One_Row_Strut"/>

    </LinearLayout>
    <LinearLayout
        style="@style/MMV"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/Lesson3_LinearLayout_BTN"
            style="@style/MW"
            android:text="@string/linear_layout_text" />
        <Button
            android:id="@+id/Lesson3_TableLayout_BTN"
            style="@style/MW"
            android:text="@string/table_layout_text" />
        <Button
            android:id="@+id/Lesson3_RelativeLayout_BTN"
            style="@style/MW"
            android:text="@string/relative_layout_text" />
        <Button
            android:id="@+id/Lesson3_AbsoluteLayout_BTN"
            style="@style/MW"
            android:text="@string/absolute_layout_text" />

    </LinearLayout>

</LinearLayout>